Clean up of some debugging and spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   "cSpell.words": [
+    "datas",
     "dcjulian",
+    "dnssec",
+    "mvance",
+    "numhosts",
+    "nxdomain",
+    "ptrs",
     "unmark"
   ]
 }
