Updated with latest devcontainer spec utilizing my devcontainer-feature

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,50 +1,12 @@
 {
 	"name": "ansible-role-unbound",
-	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
-	"features": {
-		"ghcr.io/devcontainers-contrib/features/ansible:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-contrib/features/yamllint:2": {
-			"version": "latest"
-		},
+  "image": "mcr.microsoft.com/devcontainers/base:debian",
+  "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
       "version": "latest"
+    },
+    "ghcr.io/dcjulian29/devcontainer-features/ansible-development:1": {
+      "version": "latest"
     }
-	},
-  "customizations": {
-    "vscode": {
-      "settings": {
-        "files.associations": {
-          "**/handlers/*.yml": "ansible",
-          "**/tasks/*.yml": "ansible",
-          "**/tests/*.yml": "ansible",
-          "**/examples/*.yml": "ansible"
-        },
-        "ansible.ansible.useFullyQualifiedCollectionNames": true,
-        "ansible.ansibleLint.enabled": true,
-        "ansible.python.interpreterPath": "/usr/bin/python3",
-        "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
-        "editor.rulers": [
-          90,
-          120
-        ],
-        "yaml.yamlVersion": "1.2",
-        "yaml.format.enable": true,
-        "yaml.format.singleQuote": true,
-        "yaml.format.bracketSpacing": true,
-        "yaml.validate": true,
-        "yaml.completion": true,
-        "yaml.schemaStore.enable": true,
-        "terminal.integrated.defaultProfile.linux": "bash"
-      },
-      "extensions": [
-		"redhat.ansible",
-		"streetsidesoftware.code-spell-checker",
-		"editorconfig.editorconfig",
-    "samuelcolvin.jinjahtml"
-	]
-    }
-  },
-  "postCreateCommand": "pip install ansible-lint"
+  }
 }
